; ModuleID = '/home/carl/AnghaBench/freebsd/stand/fdt/extr_fdt_loader_cmd.c_fdt_copy.c'
source_filename = "/home/carl/AnghaBench/freebsd/stand/fdt/extr_fdt_loader_cmd.c_fdt_copy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [20 x i8] c"fdt_copy va 0x%08x\0A\00", align 1
@fdtp = common dso_local global i32* null, align 8
@.str.1 = private unnamed_addr constant [34 x i8] c"No valid device tree blob found!\0A\00", align 1
@fdtp_size = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @fdt_copy(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %5 = load i32, i32* %3, align 4
  %6 = call i32 @debugf(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0), i32 %5)
  %7 = load i32*, i32** @fdtp, align 8
  %8 = icmp eq i32* %7, null
  br i1 %8, label %9, label %16

9:                                                ; preds = %1
  %10 = call i32 (...) @fdt_setup_fdtp()
  store i32 %10, i32* %4, align 4
  %11 = load i32, i32* %4, align 4
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %13, label %15

13:                                               ; preds = %9
  %14 = call i32 @printf(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.1, i64 0, i64 0))
  store i32 0, i32* %2, align 4
  br label %26

15:                                               ; preds = %9
  br label %16

16:                                               ; preds = %15, %1
  %17 = call i64 (...) @fdt_fixup()
  %18 = icmp eq i64 %17, 0
  br i1 %18, label %19, label %20

19:                                               ; preds = %16
  store i32 0, i32* %2, align 4
  br label %26

20:                                               ; preds = %16
  %21 = load i32*, i32** @fdtp, align 8
  %22 = load i32, i32* %3, align 4
  %23 = load i32, i32* @fdtp_size, align 4
  %24 = call i32 @COPYIN(i32* %21, i32 %22, i32 %23)
  %25 = load i32, i32* @fdtp_size, align 4
  store i32 %25, i32* %2, align 4
  br label %26

26:                                               ; preds = %20, %19, %13
  %27 = load i32, i32* %2, align 4
  ret i32 %27
}

declare dso_local i32 @debugf(i8*, i32) #1

declare dso_local i32 @fdt_setup_fdtp(...) #1

declare dso_local i32 @printf(i8*) #1

declare dso_local i64 @fdt_fixup(...) #1

declare dso_local i32 @COPYIN(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
